--- a/index-new.html
+++ b/index-new.html
@@ -6,7 +6,10 @@
     </head>
     <body>
     <div class="container">
-        <div class="top"></div> 
+        <div class="top">
+            <div class="title">Make a choice to begin!</div>
+            <div class="notification">test</div>
+        </div> 
         <div class="middle">
             <div data-key="82" class="key">
                 <kbd>R</kbd>
@@ -42,57 +45,56 @@
             computerPlay();
             const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
             let playerChoice = key.querySelector('#choice').innerHTML;
-            console.log(playerChoice);
-            {
-                playerChoice="scissors";
-                console.log("YAY");
-            }
+            const notif = document.querySelector('.notification');
             if(playerChoice == "rock")
                 if(computerChoice == "scissors"){
                     playerScore++;
-                    alert("Rock crushes scissors, you win this time. The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent = "Rock crushes scissors, you win this time. The score is: " + playerScore + "-" + computerScore;
                 }
                 else if(computerChoice == "paper"){
                     computerScore++;
-                    alert("Paper covers rock, haha I win this time! The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent = "Paper covers rock, haha I win this time! The score is: " + playerScore + "-" + computerScore;
                 }
                 else{
-                    alert("We both chose rock... so it's a tie! The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent = "We both chose rock... so it's a tie! The score is: " + playerScore + "-" + computerScore;
                 }
             else if(playerChoice == "paper")
                 if(computerChoice == "scissors"){
                     computerScore++;
-                    alert("Scissors cut paper, haha I win this time! The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent="Scissors cut paper, haha I win this time! The score is: " + playerScore + "-" + computerScore;
                 }
                 else if (computerChoice == "rock"){
                     playerScore++;
-                    alert("Paper covers rock, you win this time. The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent="Paper covers rock, you win this time. The score is: " + playerScore + "-" + computerScore;
                 }
                 else{
-                    alert("We both chose paper... so it's a tie! The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent="We both chose paper... so it's a tie! The score is: " + playerScore + "-" + computerScore;
                 }
             else
                 if(computerChoice == "paper"){
                     playerScore++;
-                    alert("Scissors cut paper, you win this time. The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent="Scissors cut paper, you win this time. The score is: " + playerScore + "-" + computerScore;
                 }
                 else if(computerChoice == "rock"){
                     computerScore++;
-                    alert("Rock crushers scissors, haha I win this time! The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent="Rock crushers scissors, haha I win this time! The score is: " + playerScore + "-" + computerScore;
                 }
                 else{
-                    alert("We both chose scissors... so it's a tie! The score is: " + playerScore + "-" + computerScore);
+                    notif.textContent="We both chose scissors... so it's a tie! The score is: " + playerScore + "-" + computerScore;
                 }
+        if(playerScore >= 5)
+        {
+            notif.textContent="Congratulations you beat the computer!";
+            playerScore= 0; 
+            computerScore = 0;
         }
-        /*function game(){
-            for(let x = 0; x<5;x++)
-            {
-                let temp = prompt("What is your choice?");
-                computerPlay();
-                let playerChoice = temp.toLowerCase();
-                playRound(playerChoice,computerChoice);
-            }
-        }*/
+        else if(computerScore >= 5)
+        {
+            notif.textContent= "The computer won, guess you gotta try again!";
+            playerScore = 0; 
+            computerScore = 0;
+        }
+        }
         const keys = Array.from(document.querySelectorAll('.key'));
         //keys.forEach(key=> key.addEventListener('transitioned', removeTransition));
         window.addEventListener('keydown', playRound);
